Together with help of StackOverflow and DevDocs from Google, I realigned the code and made it futureproof. This commit is still in testing!